--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
     />
     <title>2048</title>
     <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./images/2048_logo.png"
+    />
+
+    <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
